CREATE SCHEMA IF NOT EXISTS content;

CREATE TABLE IF NOT EXISTS content.source_item (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_domain VARCHAR(40) NOT NULL,
    source_platform VARCHAR(80) NOT NULL DEFAULT '',
    source_name VARCHAR(200) NOT NULL DEFAULT '',
    source_url TEXT NOT NULL DEFAULT '',
    canonical_url TEXT NOT NULL DEFAULT '',
    publishable_link_url TEXT NOT NULL DEFAULT '',
    title TEXT NOT NULL,
    body_text TEXT NOT NULL DEFAULT '',
    summary_text TEXT NOT NULL DEFAULT '',
    language VARCHAR(20) NOT NULL DEFAULT 'ko',
    country_code VARCHAR(10) NOT NULL DEFAULT 'KR',
    category VARCHAR(120) NOT NULL DEFAULT '',
    subcategory VARCHAR(120) NOT NULL DEFAULT '',
    collected_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_seen_at TIMESTAMPTZ,
    source_published_at TIMESTAMPTZ,
    raw_payload JSONB NOT NULL DEFAULT '{}'::jsonb,
    source_risk_level VARCHAR(20) NOT NULL DEFAULT 'LOW',
    access_restriction VARCHAR(30) NOT NULL DEFAULT 'PUBLIC',
    copyright_risk_level VARCHAR(20) NOT NULL DEFAULT 'LOW',
    pii_checked_yn BOOLEAN NOT NULL DEFAULT FALSE,
    usable_for_content_yn BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_source_item_domain CHECK (
        source_domain IN ('EMPLOYMENT', 'VISA_IMMIGRATION', 'LIVING_INFO', 'COMMUNITY', 'SOCIAL_NEWS', 'OCCUPATION_INFO', 'GOVERNMENT_NOTICE')
    ),
    CONSTRAINT ck_source_item_risk CHECK (source_risk_level IN ('LOW', 'MEDIUM', 'HIGH', 'UNKNOWN')),
    CONSTRAINT ck_source_item_access CHECK (access_restriction IN ('PUBLIC', 'LOGIN_REQUIRED', 'PAYWALLED', 'PRIVATE', 'UNKNOWN')),
    CONSTRAINT ck_source_item_copyright CHECK (copyright_risk_level IN ('LOW', 'MEDIUM', 'HIGH', 'UNKNOWN'))
);

CREATE TABLE IF NOT EXISTS content.generated_content (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_item_id BIGINT REFERENCES content.source_item(id) ON DELETE SET NULL,
    content_type VARCHAR(40) NOT NULL,
    category VARCHAR(120) NOT NULL DEFAULT '',
    subcategory VARCHAR(120) NOT NULL DEFAULT '',
    target_persona VARCHAR(200) NOT NULL DEFAULT '',
    language VARCHAR(20) NOT NULL DEFAULT 'en',
    title TEXT NOT NULL,
    written_content TEXT NOT NULL DEFAULT '',
    short_summary TEXT NOT NULL DEFAULT '',
    why_it_matters TEXT NOT NULL DEFAULT '',
    check_next TEXT NOT NULL DEFAULT '',
    hashtags TEXT NOT NULL DEFAULT '',
    image_url TEXT NOT NULL DEFAULT '',
    image_prompt TEXT NOT NULL DEFAULT '',
    source_disclaimer TEXT NOT NULL DEFAULT '',
    translation_yn BOOLEAN NOT NULL DEFAULT FALSE,
    translated_from VARCHAR(20) NOT NULL DEFAULT '',
    original_link TEXT NOT NULL DEFAULT '',
    generated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    generation_model VARCHAR(120) NOT NULL DEFAULT '',
    quality_score NUMERIC(6,2) NOT NULL DEFAULT 0,
    risk_score NUMERIC(6,2) NOT NULL DEFAULT 0,
    status VARCHAR(30) NOT NULL DEFAULT 'GENERATED',
    status_reason TEXT NOT NULL DEFAULT '',
    telegram_message_id BIGINT,
    reviewer_id VARCHAR(120) NOT NULL DEFAULT '',
    reviewer_name VARCHAR(200) NOT NULL DEFAULT '',
    approved_at TIMESTAMPTZ,
    rejected_at TIMESTAMPTZ,
    published_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_generated_content_type CHECK (
        content_type IN ('NEWS_EXPLAINER', 'JOB_GUIDE', 'VISA_GUIDE', 'LIVING_TIP', 'COMMUNITY_FAQ', 'EXPERT_GUIDE')
    ),
    CONSTRAINT ck_generated_content_status CHECK (
        status IN ('COLLECTED', 'GENERATED', 'SENT_TO_TELEGRAM', 'APPROVED', 'REJECTED', 'PUBLISHED')
    )
);

CREATE TABLE IF NOT EXISTS content.review_log (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    generated_content_id BIGINT NOT NULL REFERENCES content.generated_content(id) ON DELETE CASCADE,
    review_channel VARCHAR(20) NOT NULL,
    telegram_message_id BIGINT,
    reviewer_id VARCHAR(120) NOT NULL DEFAULT '',
    reviewer_name VARCHAR(200) NOT NULL DEFAULT '',
    action VARCHAR(30) NOT NULL,
    comment TEXT NOT NULL DEFAULT '',
    reviewed_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_review_log_channel CHECK (review_channel IN ('TELEGRAM', 'ADMIN', 'SCHEDULER')),
    CONSTRAINT ck_review_log_action CHECK (action IN ('SENT', 'APPROVED', 'REJECTED', 'EDIT_REQUESTED'))
);

CREATE TABLE IF NOT EXISTS content.publish_target (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    generated_content_id BIGINT NOT NULL REFERENCES content.generated_content(id) ON DELETE CASCADE,
    target_channel VARCHAR(20) NOT NULL,
    publish_status VARCHAR(20) NOT NULL DEFAULT 'PENDING',
    published_url TEXT NOT NULL DEFAULT '',
    external_post_id VARCHAR(200) NOT NULL DEFAULT '',
    published_at TIMESTAMPTZ,
    error_category VARCHAR(120) NOT NULL DEFAULT '',
    error_message TEXT NOT NULL DEFAULT '',
    request_payload JSONB NOT NULL DEFAULT '{}'::jsonb,
    response_payload JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ux_publish_target_content_channel UNIQUE (generated_content_id, target_channel),
    CONSTRAINT ck_publish_target_channel CHECK (target_channel IN ('FACEBOOK', 'SITE')),
    CONSTRAINT ck_publish_target_status CHECK (publish_status IN ('PENDING', 'PUBLISHED', 'FAILED'))
);

CREATE TABLE IF NOT EXISTS content.community_signal (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_platform VARCHAR(80) NOT NULL DEFAULT '',
    source_url TEXT NOT NULL DEFAULT '',
    topic VARCHAR(300) NOT NULL,
    language VARCHAR(20) NOT NULL DEFAULT 'en',
    country VARCHAR(10) NOT NULL DEFAULT 'KR',
    category VARCHAR(120) NOT NULL DEFAULT '',
    question_pattern TEXT NOT NULL DEFAULT '',
    frequency_score NUMERIC(6,2) NOT NULL DEFAULT 0,
    urgency_score NUMERIC(6,2) NOT NULL DEFAULT 0,
    sample_count INTEGER NOT NULL DEFAULT 0,
    author_hash VARCHAR(128) NOT NULL DEFAULT '',
    raw_retention_policy VARCHAR(80) NOT NULL DEFAULT 'ANONYMIZED_SUMMARY_ONLY',
    pii_checked_yn BOOLEAN NOT NULL DEFAULT FALSE,
    usable_for_content_yn BOOLEAN NOT NULL DEFAULT FALSE,
    terms_risk_level VARCHAR(20) NOT NULL DEFAULT 'UNKNOWN',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_community_signal_terms_risk CHECK (terms_risk_level IN ('LOW', 'MEDIUM', 'HIGH', 'UNKNOWN'))
);

CREATE INDEX IF NOT EXISTS idx_source_item_domain_collected
ON content.source_item(source_domain, collected_at DESC, id DESC);

CREATE INDEX IF NOT EXISTS idx_source_item_category
ON content.source_item(category, subcategory, collected_at DESC);

CREATE INDEX IF NOT EXISTS idx_source_item_usable
ON content.source_item(usable_for_content_yn, source_risk_level, collected_at DESC);

CREATE UNIQUE INDEX IF NOT EXISTS ux_source_item_domain_url_hash
ON content.source_item(source_domain, md5(COALESCE(NULLIF(canonical_url, ''), NULLIF(source_url, ''), '')))
WHERE COALESCE(NULLIF(canonical_url, ''), NULLIF(source_url, '')) IS NOT NULL;

CREATE INDEX IF NOT EXISTS idx_generated_content_status
ON content.generated_content(status, generated_at DESC, id DESC);

CREATE INDEX IF NOT EXISTS idx_generated_content_category
ON content.generated_content(category, subcategory, generated_at DESC);

CREATE INDEX IF NOT EXISTS idx_generated_content_source
ON content.generated_content(source_item_id);

CREATE UNIQUE INDEX IF NOT EXISTS ux_generated_content_source_item
ON content.generated_content(source_item_id)
WHERE source_item_id IS NOT NULL;

CREATE INDEX IF NOT EXISTS idx_generated_content_telegram
ON content.generated_content(telegram_message_id);

CREATE INDEX IF NOT EXISTS idx_generated_content_collected_queue
ON content.generated_content(generated_at ASC, id ASC)
WHERE status = 'COLLECTED';

CREATE INDEX IF NOT EXISTS idx_generated_content_telegram_queue
ON content.generated_content(generated_at ASC, id ASC)
WHERE status = 'GENERATED';

CREATE INDEX IF NOT EXISTS idx_generated_content_approval_queue
ON content.generated_content(generated_at ASC, id ASC)
WHERE status = 'SENT_TO_TELEGRAM';

CREATE INDEX IF NOT EXISTS idx_generated_content_approved
ON content.generated_content(approved_at DESC NULLS LAST, id DESC)
WHERE status = 'APPROVED';

CREATE INDEX IF NOT EXISTS idx_review_log_content
ON content.review_log(generated_content_id, reviewed_at DESC, id DESC);

CREATE INDEX IF NOT EXISTS idx_review_log_action
ON content.review_log(action, reviewed_at DESC);

CREATE INDEX IF NOT EXISTS idx_review_log_telegram_message
ON content.review_log(telegram_message_id, reviewed_at DESC)
WHERE telegram_message_id IS NOT NULL;

CREATE INDEX IF NOT EXISTS idx_publish_target_content
ON content.publish_target(generated_content_id, created_at DESC);

CREATE INDEX IF NOT EXISTS idx_publish_target_status
ON content.publish_target(target_channel, publish_status, created_at DESC);

CREATE INDEX IF NOT EXISTS idx_community_signal_topic
ON content.community_signal(topic, category, created_at DESC);

CREATE INDEX IF NOT EXISTS idx_community_signal_score
ON content.community_signal(frequency_score DESC, urgency_score DESC, created_at DESC);

CREATE INDEX IF NOT EXISTS idx_community_signal_usable
ON content.community_signal(usable_for_content_yn, terms_risk_level, created_at DESC);
